--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-.test {
-  color: red;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.splash {
+  background-image: url('./assets/images/splash-melb.jpg');
+  height: 100vh;
+  background-size: cover;
 }
