--- a/style.css
+++ b/style.css
@@ -3,6 +3,21 @@
   padding: 0;
 }
 
+body {
+  background: rgb(20, 34, 40);
+}
+
+h1 {
+  font-family: 'Old Standard TT', 'Serif';
+  color: rgb(120, 96, 66);
+}
+
+p {
+  font-family: 'Questrial', 'sans-serif';
+  font-size: 1.2em;
+  color: rgb(203, 215, 221);
+}
+
 nav ul {
   padding: 1em;
   overflow: hidden;
@@ -20,16 +35,16 @@ nav ul li{
   background-image: url('./assets/images/splash-melb.jpg');
   height: 100vh;
   background-size: cover;
+  box-shadow: 0 0 1em black;
 }
 
 .project-container {
   padding: 2em 5em;
-  background-color: green;
+
 }
 
 .project {
   margin: 1em;
-  border: 1px black solid;
   padding: 2em;
   overflow: hidden;
   text-align: center;
@@ -41,21 +56,20 @@ nav ul li{
 }
 
 .project p {
-  font-size: 1.2em;
   margin-left: 16em;
   padding: 0 3em;
 }
 
 .project img{
   float:left;
-  height: 300px;
-  width: 300px;
+  height: 20em;
+  width: 20em;
   margin-right: 1em;
 }
 
-
 .bio-container {
-  padding: 4em;
+  padding: 4em 8em;
+  box-shadow: 0 0 1em rgba(0,0,0,0.4);
 }
 
 .bio-container img{
